scripts/nullness/original/url58b12a0c74_tatianaslod_daooTP_tgz-pJ8-tp1_MainTp1J8.txt
../original/url58b12a0c74_tatianaslod_daooTP_tgz-pJ8-tp1_MainTp1J8/src/server/PoolThreadTaskExecutor2.java:20: error: [method.invocation] call to buildThread() not allowed on the given receiver.
            threads[i] = buildThread();
                                    ^
  found   : @UnderInitialization(server.PoolThreadTaskExecutor2.class) @NonNull PoolThreadTaskExecutor2
  required: @Initialized @NonNull PoolThreadTaskExecutor2
../original/url58b12a0c74_tatianaslod_daooTP_tgz-pJ8-tp1_MainTp1J8/src/server/TaskExecutorProvider.java:41: error: [return] incompatible types in return.
            return s;
                   ^
  type of expression: @Initialized @Nullable String
  method return type: @Initialized @NonNull String
../original/url58b12a0c74_tatianaslod_daooTP_tgz-pJ8-tp1_MainTp1J8/src/tp1/Value.java:11: error: [assignment] incompatible types in assignment.
        this.value = val;
                     ^
  found   : T extends @Initialized @Nullable Object
  required: T extends @Initialized @NonNull Object
../original/url58b12a0c74_tatianaslod_daooTP_tgz-pJ8-tp1_MainTp1J8/src/tp1/Value.java:14: error: [initialization.fields.uninitialized] the constructor does not initialize fields: value
    public Value() {
           ^
../original/url58b12a0c74_tatianaslod_daooTP_tgz-pJ8-tp1_MainTp1J8/src/tp1/visitor/JsonVisitor.java:12: error: [initialization.fields.uninitialized] the constructor does not initialize fields: query
    public JsonVisitor() {
           ^
../original/url58b12a0c74_tatianaslod_daooTP_tgz-pJ8-tp1_MainTp1J8/src/tp1/visitor/ConsoleVisitor.java:17: error: [dereference.of.nullable] dereference of possibly-null reference list.get(i)
            stringBuilder.append(list.get(i).toString());
                                         ^
../original/url58b12a0c74_tatianaslod_daooTP_tgz-pJ8-tp1_MainTp1J8/src/tp1/visitor/ConsoleVisitor.java:21: error: [dereference.of.nullable] dereference of possibly-null reference list.get(list.size() - 1)
            stringBuilder.append(list.get(list.size() - 1).toString());
                                         ^
../original/url58b12a0c74_tatianaslod_daooTP_tgz-pJ8-tp1_MainTp1J8/src/tp1/visitor/ConsoleVisitor.java:56: error: [dereference.of.nullable] dereference of possibly-null reference constant.getValue()
        System.out.print(constant.getValue().toString() + " ");
                                          ^
../original/url58b12a0c74_tatianaslod_daooTP_tgz-pJ8-tp1_MainTp1J8/src/tp1/visitor/ConsoleVisitor.java:62: error: [dereference.of.nullable] dereference of possibly-null reference value.getValue()
        System.out.print(value.getValue().toString() + " ");
                                       ^
../original/url58b12a0c74_tatianaslod_daooTP_tgz-pJ8-tp1_MainTp1J8/src/tp1/SqlQueryBuilder.java:35: error: [argument] incompatible argument for parameter a of Arrays.asList.
        selectColumns = asList(columns);
                               ^
  found   : @Initialized @NonNull Column</*RAW*/> @Initialized @Nullable []
  required: @Initialized @NonNull Column</*RAW*/> @Initialized @NonNull []
../original/url58b12a0c74_tatianaslod_daooTP_tgz-pJ8-tp1_MainTp1J8/src/tp1/SqlQueryBuilder.java:41: error: [argument] incompatible argument for parameter a of Arrays.asList.
        fromTables = asList(tables);
                            ^
  found   : @Initialized @NonNull Table @Initialized @Nullable []
  required: @Initialized @NonNull Table @Initialized @NonNull []
../original/url58b12a0c74_tatianaslod_daooTP_tgz-pJ8-tp1_MainTp1J8/src/tp1/SqlQueryBuilder.java:53: error: [argument] incompatible argument for parameter a of Arrays.asList.
        orderByColumns = asList(columns);
                                ^
  found   : @Initialized @NonNull Column</*RAW*/> @Initialized @Nullable []
  required: @Initialized @NonNull Column</*RAW*/> @Initialized @NonNull []
../original/url58b12a0c74_tatianaslod_daooTP_tgz-pJ8-tp1_MainTp1J8/src/tp1/SqlQueryBuilder.java:59: error: [argument] incompatible argument for parameter a of Arrays.asList.
        groupByColumns = asList(columns);
                                ^
  found   : @Initialized @NonNull Column</*RAW*/> @Initialized @Nullable []
  required: @Initialized @NonNull Column</*RAW*/> @Initialized @NonNull []
../original/url58b12a0c74_tatianaslod_daooTP_tgz-pJ8-tp1_MainTp1J8/src/tp1/MainTp1.java:44: error: [return] incompatible types in return.
        return null;
               ^
  type of expression: null (NullType)
  method return type: @Initialized @NonNull Condition
../original/url58b12a0c74_tatianaslod_daooTP_tgz-pJ8-tp1_MainTp1J8/src/encoder/CipherEncoder.java:33: error: [return] incompatible types in return.
        return null;
               ^
  type of expression: null (NullType)
  method return type: @Initialized @NonNull byte @Initialized @NonNull []
../original/url58b12a0c74_tatianaslod_daooTP_tgz-pJ8-tp1_MainTp1J8/src/encoder/CipherEncoder.java:53: error: [return] incompatible types in return.
        return null;
               ^
  type of expression: null (NullType)
  method return type: @Initialized @NonNull String
../original/url58b12a0c74_tatianaslod_daooTP_tgz-pJ8-tp1_MainTp1J8/src/encoder/MsgEncoderProvider.java:41: error: [return] incompatible types in return.
            return s;
                   ^
  type of expression: @Initialized @Nullable String
  method return type: @Initialized @NonNull String
Note: ../original/url58b12a0c74_tatianaslod_daooTP_tgz-pJ8-tp1_MainTp1J8/src/tp1/visitor/JsonVisitor.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
17 errors
